--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
     <header>
       <nav class="m-2 p-2 border-b-1">
         <ul class="w-11/12 mx-auto flex items-center justify-between">
-          <li><img src="./assets/Logo.png" alt="" /></li>
+          <li>
+            <img
+              class="h-16"
+              src="./assets/Josim_Stram-removebg-preview.png"
+              alt=""
+            />
+          </li>
           <li class="text-xl">
             <label class="input">
               <svg
